--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ts-node": "ts-node -P tsconfig.commonjs.json -r tsconfig-paths/register",
     "prepare": "husky install"
   },
+  "repository": "https://github.com/Kaperskyguru/contentre-api",
   "license": "MIT",
   "engines": {
     "node": ">=14.x.x"
@@ -32,6 +33,7 @@
     "@rollup/plugin-run": "^2.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.0",
@@ -41,6 +43,7 @@
     "apollo-server-plugin-http-headers": "^0.1.4",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "fast-geoip": "^1.1.50",
