--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.0",
+    "@types/uuid": "^8.3.3",
     "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
     "apollo-server-plugin-base": "^3.4.0",
@@ -53,7 +54,8 @@
     "rollup": "^2.61.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.1"
+    "rollup-plugin-typescript2": "^0.31.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.1.0",
