--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "graphql": "^16.2.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
+    "puppeteer": "^13.0.1",
     "rollup": "^2.61.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
@@ -72,6 +73,7 @@
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "prisma": "^3.6.0",
+    "@types/puppeteer": "^5.4.4",
     "typescript": "^4.5.4"
   }
 }
