--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.0",
+    "@types/nodemailer": "^6.4.4",
+    "@types/url-parse": "^1.4.6",
     "@types/uuid": "^8.3.3",
     "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
@@ -53,10 +55,12 @@
     "graphql": "^16.2.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.2",
     "rollup": "^2.61.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
+    "url-parse": "^1.5.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
