chore: code clean

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "rollup --max-old-space-size=8192 -c -w && node dist/graphql.js",
     "build": "rollup -c --environment NODE_ENV:production",
     "dev": "rollup -c --environment NODE_ENV:development",
-    "prod": "node dist/graphql.js",
+    "prod": "yarn prisma:update && node dist/graphql.js",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "review": "rm -rf node_modules/.cache && yarn && yarn prisma:update && yarn start",
     "graphql:codegen": "graphql-codegen --config codegen.yml",
