--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
+    "url-metadata": "^2.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -66,6 +67,7 @@
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-resolvers": "^2.4.2",
+    "@types/puppeteer": "^5.4.4",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base-typescript-prettier": "^4.1.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -73,7 +75,6 @@
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "prisma": "^3.6.0",
-    "@types/puppeteer": "^5.4.4",
     "typescript": "^4.5.4"
   }
 }
