--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "apollo-server-plugin-http-headers": "^0.1.4",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
