fix: change from dev to prod

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "rollup --max-old-space-size=8192 -c -w && node dist/graphql.js",
     "build": "rollup -c --environment NODE_ENV:production",
     "dev": "rollup -c --environment NODE_ENV:development",
-    "prod": "yarn prisma:update && node dist/graphql.js",
+    "prod": "yarn prisma:prod && node dist/graphql.js",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "review": "rm -rf node_modules/.cache && yarn && yarn prisma:update && yarn start",
     "graphql:codegen": "graphql-codegen --config codegen.yml",
     "prisma:init": "prisma migrate reset",
     "prisma:update": "prisma migrate dev",
+    "prisma:prod": "prisma migrate deploy",
     "docker:db": "docker-compose -f prisma/docker-compose.yml up -d",
     "docker:build": "docker build . -t contentre-api",
     "docker:run": "docker run --env-file ./.env -p 9000:9000 --name contentre-api contentre-api",
