--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-run": "^2.1.0",
+    "@sendgrid/mail": "^7.6.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
