--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-run": "^2.1.0",
     "@sendgrid/mail": "^7.6.2",
+    "@types/analytics-node": "^3.1.7",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
@@ -45,8 +46,10 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.0",
     "@types/nodemailer": "^6.4.4",
+    "@types/segment-analytics": "^0.0.34",
     "@types/url-parse": "^1.4.6",
     "@types/uuid": "^8.3.3",
+    "analytics-node": "^6.0.0",
     "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
     "apollo-server-plugin-base": "^3.4.0",
