--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@graphql-tools/schema": "^8.3.1",
+    "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@prisma/client": "^3.6.0",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -44,6 +45,7 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.4",
     "@types/node": "^17.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/segment-analytics": "^0.0.34",
