--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "apollo-server-express": "^3.5.0",
     "apollo-server-plugin-base": "^3.4.0",
     "apollo-server-plugin-http-headers": "^0.1.4",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
