--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mailchimp__mailchimp_marketing": "^3.0.4",
     "@types/node": "^17.0.0",
+    "@types/node-mailjet": "^3.3.9",
     "@types/nodemailer": "^6.4.4",
     "@types/segment-analytics": "^0.0.34",
     "@types/url-parse": "^1.4.6",
@@ -67,6 +68,7 @@
     "graphql": "^16.2.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
+    "node-mailjet": "^3.4.1",
     "nodemailer": "^6.7.2",
     "rollup": "^2.61.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
