--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-mailjet": "^3.4.1",
     "nodemailer": "^6.7.2",
+    "octonode": "^0.10.2",
     "rollup": "^2.61.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
