--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "seed": "yarn ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@devoxa/paddle-sdk": "^0.2.1",
     "@graphql-tools/schema": "^8.3.1",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@prisma/client": "^3.6.0",
