--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^2.29.1",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
