--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "node-mailjet": "^3.4.1",
     "nodemailer": "^6.7.2",
     "octonode": "^0.10.2",
+    "openai": "^3.1.0",
     "rollup": "^2.61.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
