--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "graphql": "^16.2.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
+    "node-html-markdown": "^1.3.0",
     "node-mailjet": "^3.4.1",
     "nodemailer": "^6.7.2",
     "octonode": "^0.10.2",
