--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "apollo-server-plugin-http-headers": "^0.1.4",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.1",
